--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "bootstrap": "^4.6.0",
     "easy-peasy": "^4.0.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "shortid": "^2.2.16",
